--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,205 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-primary: #6741d9;
+  --color-primary-light: #7950f2;
+  --color-text: #dee2e6;
+  --color-text-dark: #adb5bd;
+  --color-background-100: #343a40;
+  --color-background-500: #2b3035;
+  --color-background-900: #212529;
+  --color-red: #fa5252;
+  --color-red-dark: #e03131;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  color: var(--color-text);
+  background-color: var(--color-background-900);
+  padding: 2.4rem;
+}
+
+/* ******* */
+
+.navbar {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  background-color: var(--color-primary);
+  border: 0;
+  border-radius: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.navbar h1 {
+  font-size: 2.4rem
+}
+
+.navbar form {
+  flex-basis: 50%;
+}
+
+.navbar .search {
+  width: 100%;
+  font-size: 1.8rem;
+  font-family: inherit;
+  padding: 1rem 2rem;
+  background-color: var(--color-primary-light);
+  outline: none;
+  border: 0;
+  border-radius: 6px;
+  color: var(--color-text);
+}
+
+.navbar .search::placeholder {
+  font-family: inherit;
+  color: var(--color-text-dark);
+}
+
+.navbar .search:focus {
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2);
+  transform: translateY(-1px);
+}
+
+.navbar .num-found {
+  font-size: 1.4rem;
+}
+
+.navbar .num-found span {
+  font-size: 1.6rem;
+  color: #eff3f7;
+  font-weight: bold;
+}
+
+.main {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.box {
+  flex: 1 0 400px;
+  border-radius: 1rem;
+  min-height: 200px;
+  background-color: var(--color-background-500);
+  position: relative;
+  padding: 1.5rem;
+}
+
+.toggle-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 2.2rem;
+  background-color: var(--color-background-900);
+  color: var(--color-text);
+  border: 0;
+  border-radius: 50%;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 840px) {
+  .box {
+    flex-basis: 320px;
+  }
+}
+
+
+@media screen and (max-width: 680px) {
+  body {
+    padding: 1rem;
+  }
+
+  .navbar h1 {
+    font-size: 1.5rem
+  }
+
+  .navbar form {
+    flex-basis: 40%;
+  }
+
+  .navbar .search {
+    width: 100%;
+    font-size: 1.2rem;
+    font-family: inherit;
+    padding: 0.5rem 1rem;
+    background-color: var(--color-primary-light);
+    outline: none;
+    border: 0;
+    border-radius: 6px;
+    color: var(--color-text);
+  }
+
+  .navbar .num-found {
+    font-size: 1.2rem;
+  }
+
+  .main {
+    flex-direction: column
+  }
+
+  .box {
+    flex-basis: auto;
+  }
+
+}
+
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 40 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 /52 / 62 / 74 / 86 / 98
+*/
+
+/*
+FULL STAR
+
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 20 20"
+  fill="#000"
+  stroke="#000"
+>
+  <path
+    d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+  />
+</svg>
+
+
+EMPTY STAR
+
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  fill="none"
+  viewBox="0 0 24 24"
+  stroke="#000"
+>
+  <path
+    strokeLinecap="round"
+    strokeLinejoin="round"
+    strokeWidth="{2}"
+    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+  />
+</svg>
+
+*/
+;
