--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .navbar h1 {
-  font-size: 2.4rem
+  font-size: 2.4rem;
 }
 
 .navbar form {
@@ -136,6 +136,17 @@ body {
   height: 80px;
 }
 
+.card-summary {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-background-100);
+  padding: 1rem 2rem;
+}
+
+.card-summary .summary {
+  margin-top: 1rem;
+}
+
 .description {
   display: flex;
   flex-direction: column;
@@ -143,11 +154,13 @@ body {
   flex-basis: 100%;
 }
 
-.description h3 {
+.description h3,
+.card-summary h3 {
   font-size: 2rem;
 }
 
-.description p {
+.description p,
+.card-summary p {
   font-size: 1.6rem;
 }
 
@@ -156,7 +169,8 @@ body {
   gap: 1rem;
 }
 
-.watch-info {
+.watch-info,
+.summary {
   display: flex;
   justify-content: space-between;
 }
@@ -185,14 +199,13 @@ body {
   }
 }
 
-
 @media screen and (max-width: 680px) {
   body {
     padding: 1rem;
   }
 
   .navbar h1 {
-    font-size: 1.5rem
+    font-size: 1.5rem;
   }
 
   .navbar form {
@@ -216,13 +229,12 @@ body {
   }
 
   .main {
-    flex-direction: column
+    flex-direction: column;
   }
 
   .box {
     flex-basis: auto;
   }
-
 }
 
 /*
@@ -265,4 +277,3 @@ EMPTY STAR
 </svg>
 
 */
-;
